# ThesisCode

./: .gitignore  LICENSE  README.md
licenses/: license_LGPL_FindPAPI.txt
scrimppp/: CMakeLists.txt
scrimppp/cmake/: FindFFTW.cmake  FindLIKWID.cmake  FindPAPI.cmake
scrimppp/cvt_src/: cvt_cli.cpp  cvt_cli.hpp  cvt_matprof.cpp  cvt_ts.cpp  parse_mode_cli.cpp
scrimppp/data_testing/: test.ascii
scrimppp/inc/: MatProfAlgo.hpp  ScrimpBlocked.hpp  ScrimpDistribPar.hpp  ScrimpSequ.hpp  ScrimpSequOpt.hpp  ScrimpSequVec.hpp  ScrimpTrivialPar.hpp  ScrimpTrivialParVec.hpp  ScrimpVertBlocked.hpp  ScrimpppOrig.hpp  ScrimpppParams.hpp  biniobase.h  binproffile.h  bintsfile.hpp  checkerboard_partitioning.h  kernels.h  logging.hpp  papiwrapper.hpp  partitioning_1d.h  settings.h  timing.h
scrimppp/src/: MatProfAlgo.cpp  ScrimpBlocked.cpp  ScrimpDistribPar.cpp  ScrimpSequ.cpp  ScrimpSequOpt.cpp  ScrimpSequVec.cpp  ScrimpTrivialPar.cpp  ScrimpTrivialParVec.cpp  ScrimpVertBlocked.cpp  ScrimpppOrig.cpp  biniobase.cpp  binproffile.cpp  bintsfile.cpp  checkerboard_partitioning.cpp  kernels.cpp  logging.cpp  main.cpp  papiwrapper.cpp  partitioning_1d.cpp  timing.cpp
scrimppp/utils/: compare_profile_indices.py  generate_ts.py  get_next_procnum_scaling.py  launcher_all_logs_to_file.sh  launcher_discard_slaveout.sh  launcher_slaveperf_to_file.sh  random_ts_gen.py  validate_profiles.py
